crates/pattern_provider/tests/snapshots/compose_segment3_regression__snapshot_mixed_blocks_with_and_without_description.snap
---
source: crates/pattern_provider/tests/compose_segment3_regression.rs
assertion_line: 136
expression: text
---
<system-reminder>
[memory:current_state]

<block:human type="core" permission="Read, Append, Write">
Information about the partner.

Name: Alex
Preferences: concise responses
</block:human>

<block:task_queue type="working" permission="Read, Append, Write">
1. Fix bug #123
2. Write tests
</block:task_queue>
</system-reminder>
